--- a/Employee_Payroll_MVCApplication/Employee_Payroll_MVCApplication.csproj
+++ b/Employee_Payroll_MVCApplication/Employee_Payroll_MVCApplication.csproj
@@ -256,6 +256,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\LogoImage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
